Remove trailing comma in Wordibly contributions; typo fixes (LinkedIn, Bachelor of Fine Arts, Hand Skills, painting.png)
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </nav>
         </div>
       </div>
-      <p class="header-intro scroll-in" data-content-html="headerIntro">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is a work in progress being built with Cursor, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
+      <p class="header-intro scroll-in" data-content-html="headerIntro">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is being built with Cursor and is a work in progress, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
 
       <main class="page-main">
         <section id="projects" class="section projects-section">
@@ -54,7 +54,7 @@
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
-                    <p class="project-detail-value" data-content="projects.0.contributions">Brand, Product, Web Design, Design System, Illustration, Motion,</p>
+                    <p class="project-detail-value" data-content="projects.0.contributions">Brand, Product, Web Design, Design System, Illustration, Motion</p>
                   </div>
                 </div>
                 <div class="project-about">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="project-about">
                   <h4 class="project-detail-heading">About</h4>
-                  <p class="project-about-text" data-content="projects.1.about">Cotulla is a cloud-based platform for oil &amp; gas operators, offering advanced analytics and data visualization capabilities to optimize production and improve operational efficiency.</p>
+                  <p class="project-about-text" data-content="projects.1.about">Cotulla is a trade school umbrella organization that hired Big Human to build their brand from scratch — logo, visual identity, and website — with the goal of establishing legitimacy and attracting funding.</p>
                 </div>
               </div>
               <div class="project-media" role="region" aria-label="Project images">
