--- a/info.html
+++ b/info.html
@@ -36,7 +36,7 @@
           </nav>
         </div>
       </div>
-      <p class="header-intro scroll-in" data-content-html="headerIntroInfo">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is a work in progress being built with Cursor, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
+      <p class="header-intro scroll-in" data-content-html="headerIntroInfo">Maj is a senior designer based in Brooklyn, NY. They specialize in designing brand systems that translate seamlessly into digital experiences. This website is being built with Cursor and is a work in progress, please forgive any bugs. Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.</p>
 
       <main class="page-main info-page">
         <div class="info-row scroll-in">
@@ -44,7 +44,7 @@
           <div class="info-row-content">
             <a href="mailto:maj.v.des@gmail.com" class="info-link" data-content="info.contact.email">maj.v.des@gmail.com</a><br />
             <a href="tel:+12068536672" class="info-link" data-content="info.contact.phone">+1(206)8536672</a><br />
-            <a href="#" class="info-link" data-content="info.contact.linkedin">Linkedin</a>
+            <a href="#" class="info-link" data-content="info.contact.linkedin">LinkedIn</a>
           </div>
         </div>
 
@@ -106,7 +106,7 @@
           <h2 class="info-row-heading">Education</h2>
           <div class="info-row-content info-list">
             <p data-content="info.education.0">Decorus Atelier / Fine Arts</p>
-            <p data-content="info.education.1">Cornish College of the Arts / Bachelors of Fine Arts in Visual Communication</p>
+            <p data-content="info.education.1">Cornish College of the Arts / Bachelor of Fine Arts in Visual Communication</p>
           </div>
         </div>
       </main>
